# shmpy

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  data_client.hpp  data_server.hpp  libshmpy.hpp  main.cxx  msgq.hpp  pool.hpp  py_basepool.cxx  py_client.cxx  py_dtype.cxx  py_server.cxx  py_variable.cxx  var.hpp  wrapper.cxx
.cache/clangd/index/: Testcase_Pool.cxx.8CED2B267D5A4F27.idx  Testcase_main.cxx.108A851E94CF42EA.idx  py_basepool.cxx.737E822AECA3EF1F.idx  py_basepool.hpp.C47ACA92F5477971.idx  py_client.cxx.5D15DF00057F0475.idx  py_client.hpp.645508E1B73C1721.idx  py_config.cxx.FF7038231008F058.idx  py_config.hpp.15C08F063E2A68DD.idx  py_dtype.cxx.D79C0BFEA5079A2A.idx  py_dtype.hpp.100A2EC35E493BA1.idx  py_error_code.cxx.02981B274E104560.idx  py_error_code.hpp.D83E118DE4279E0A.idx  py_except.cxx.22B6B28FFB940131.idx  py_except.hpp.A90BF8C97FC8A438.idx  py_message.cxx.E8E405DCFF068A05.idx  py_message.hpp.67BDD388CE03CDE5.idx  py_server.cxx.EE864E1B2D8DF7BB.idx  py_server.hpp.52F12FE35F39473A.idx  py_utils.cxx.944BBB79DC65E66B.idx  py_utils.hpp.5D1297682D624B74.idx  py_variable.cxx.A16F0C34CD276F1A.idx  py_variable.hpp.425FB051DD96E634.idx  shmpy_impl.cxx.907FF49B0648B8F1.idx
include/: data_client.hpp  data_server.hpp  dtype.hpp  exception.hpp  libshmpy.hpp  msgq.hpp  pool.hpp  py_basepool.hpp  py_client.hpp  py_common.hpp  py_config.hpp  py_dtype.hpp  py_ec.hpp  py_error_code.hpp  py_except.hpp  py_message.hpp  py_pool.hpp  py_server.hpp  py_utils.hpp  py_variable.hpp  var.hpp
include/core/: data_client.hpp  data_server.hpp  dtype.hpp  libshmpy.hpp  pool.hpp  var.hpp
include/mem/: mem_literal.hpp
shm_kernel/: CMakeLists.txt
src/: shmpy_impl.cxx  wrapper.cxx
src/C++API/: py_basepool.cxx  py_client.cxx  py_config.cxx  py_dtype.cxx  py_ec.cxx  py_error_code.cxx  py_except.cxx  py_handle_cache.cxx  py_insert.cxx  py_message.cxx  py_server.cxx  py_utils.cxx  py_variable.cxx
tests/: CMakeLists.txt  Test_Pool.cxx  Test_Var.cxx  main.cxx
tests/cxx/: Test_PyServer.cxx  Testcase_Pool.cxx  Testcase_Server.cxx
tests/py/: testcase_server.py
